...
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.1"
        android:orientation="vertical"/>

    <me.proton.core.presentation.ui.view.ProtonInput
        android:id="@+id/days_and_hours_picker_days_input"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/days_and_hours_picker_start_guideline"
        app:layout_constraintEnd_toStartOf="@+id/days_and_hours_picker_days_text_view"
...
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintGuide_percent="0.47"
        android:orientation="vertical"/>

    <me.proton.core.presentation.ui.view.ProtonInput
        android:id="@+id/days_and_hours_picker_hours_input"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/days_and_hours_picker_mid_guideline"
        app:layout_constraintEnd_toStartOf="@+id/days_and_hours_picker_hours_text_view"
...
